--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node": "^18.4.0",
     "sequelize": "^6.21.2"
-  }
+  },
+  "keywords": []
 }
